Make API note centric rather than deck centric for notes to match schema
